<resources>
    <string name="app_name">GuysDestiny</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Prihlásenie</string>
    <string name="signup">Registrácia</string>
    <string name="name">Meno</string>
    <string name="password">Heslo</string>
    <string name="log">Prihlásiť</string>
    <string name="sign">Registrovať</string>
    <string name="or">alebo prejdite na </string>
    <string name="gotoSign"> Registráciu</string>
    <string name="gotoLogin"> Prihlásenie</string>
    <string name="wifi_fragment">Wifi Fragment</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="kontakty">Kontakty</string>
    <string name="wifi">Wifi</string>
</resources>
